src/test/deca/context/valid/Obj/decl-class-field.deca
// Description:
//    Déclaration d'une classe avec champs sans méthode
//
// Résultat:
//    Succès
//
class A {
    int a;
    float b;
    boolean c;
    protected int d;
}
{
    A x;
    int n = x.a;
}